syntax = "proto3";

option java_multiple_files = true;
option java_package = "dfs.auth";
option java_outer_classname = "AuthProto";

package auth;

service Auth {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string ip = 3;
}

message LoginResponse {
  string token = 1;
  string time = 2;
  int64 login_times = 3;
}
